public/styles.css
body {
    display: flex;
    align-items: center;
    flex-direction: column;
    min-height: 100vh;
    background-color: rgba(247, 248, 250, 1);
    margin: 0;
}

.wrapper {
    min-height: 20vh;
    width: 80vh;
    background-color: white;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    border-radius: 32px;
    margin: 20px;
    display: flex;
    flex-direction: column;
}

.search-city {
    min-height: 5vh;
    border: 1px solid rgba(247, 248, 250, 1);
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    border-radius: 32px;
    margin: 20px 20px 5px 20px;
    padding-left: 20px;
    font-size: 20px;
    outline: none;
}

.current-weather {
    display:flex;
    flex-direction: row;
    margin: 20px;
    border: 1px solid black;
    border-radius: 16px;
    align-items: center;
}

.weather-icon{
    margin: 5px;
    border: 1px solid red;
}

.weather-stats {
    list-style-type:  none;
    border: 1px solid green;
    margin-right: auto;
}

.weather-stats li {
    display: table;
    border: 1px solid purple;
}

span {
    margin: 5px;
}

.week-weather {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    margin: 20px;
    border: 1px solid orange;
    overflow-x: auto;
}
.week-day {
    min-width: 15vh;
    min-height: 9vh;
    border: 1px solid black;
    margin: 20px;
    border-radius: 16px;
}

h1 {
    font-size: 4rem;
}

.suggestions {
    border: 1px solid rgba(247, 248, 250, 1);
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    border-radius: 32px;
    margin: 10px 20px 5px 20px;
    padding-left: 20px;
    font-size: 20px;
    outline: none;
    padding: 10px 30px 10px 30px;
}

.suggestion li {
    padding: 10px;
    cursor: pointer;
}

img {
    width: 50px; 
    height: auto;
}

h1 {
    border: 1px solid blue;
}

